<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_bg_test"
    android:layout_weight="100"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/galata_gooftaa"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_below="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@drawable/jc_bg">

        <com.example.jean.jcplayer.view.JcPlayerView
            android:id="@+id/jcplayer"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            app:next_icon_color="#FFFFFF"
            app:previous_icon_color="#FFFFFF"
            app:random_icon_color="#FFFFFF"
            app:repeat_icon_color="#FFFFFF"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:layout_below="@+id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textContents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:textSize="20sp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        android:layout_marginBottom="20dp"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>